@@ -84,7 +84,7 @@ Wine <- split(p = 0.75, Dataset = wine, class = 14)
 # Estimate number of components, component weights and component 
 # parameters for train subsets.
 
-n <- range(Wine$ntrain)
+n <- range(Wine@ntrain)
 
 K <- c(as.integer(1 + log2(n[1])), # Minimum v follows Sturges rule.
   as.integer(10 * log10(n[2]))) # Maximum v follows log10 rule.
@@ -92,7 +92,7 @@ K <- c(as.integer(1 + log2(n[1])), # Minimum v follows Sturges rule.
 K <- c(floor(K[1]^(1/13)), ceiling(K[2]^(1/13)))
 
 wineest <- REBMIX(model = "REBMVNORM",
-  Dataset = Wine$train,
+  Dataset = Wine@train,
   Preprocessing = "Parzen window",
   cmax = 10,
   Criterion = "ICL-BIC",
@@ -106,18 +106,18 @@ plot(wineest, pos = 3, nrow = 7, ncol = 6, what = c("den"))
 
 # Selected features.
 
-predictive <- RCLSMIX(model = "RCLSMVNORM", 
+winecla <- RCLSMIX(model = "RCLSMVNORM", 
   x = list(wineest),
-  Dataset = Wine$test,
-  Zt = Wine$Zt)
+  Dataset = Wine@test,
+  Zt = Wine@Zt)
 
-predictive
+winecla
 
-summary(predictive)
+summary(winecla)
 
 # Plot selected features.
 
-plot(predictive, nrow = 7, ncol = 6)
+plot(winecla, nrow = 7, ncol = 6)
 }
 }
 \keyword{datasets}
